--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -6,6 +6,6 @@
   <script>location="{{ page.redirect.to }}"</script>
   <meta http-equiv="refresh" content="0; url={{ page.redirect.to }}">
   <meta name="robots" content="noindex">
-  <h1>Redirecting&hellip;</h1>
+  <h1>Mengalihkan&hellip;</h1>
   <a href="{{ page.redirect.to }}">Klik disini jika anda belum teralihkan.</a>
 </html>
